main/default/objects/Graph_API_Settings__c/Graph_API_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Graph API Settings</label>
</CustomObject>