main/default/objects/Graph_API_Settings__c/fields/Refresh_Token2__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Token2__c</fullName>
    <label>Refresh Token2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>