main/default/objects/Graph_API_Settings__c/fields/Refresh_Token3__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Token3__c</fullName>
    <label>Refresh Token3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>