main/default/objects/Graph_API_Settings__c/fields/Refresh_Token4__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Token4__c</fullName>
    <label>Refresh Token4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>